kubernetes/django-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-site
  labels:
    app.kubernetes.io/name: django
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: django
  template:
    metadata:
      labels:
        app.kubernetes.io/name: django
    spec:
      containers:
        - name: django
          image: django_app:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
