kubernetes/django-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: django
  labels:
    app.kubernetes.io/name: django
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: django
  ports:
    - name: http
      port: 80
      targetPort: http
